appId: ${E2E_APP_ID}
---
- tapOn:
    text: "^Email( or mobile phone number)?$"
- waitForAnimationToEnd
- inputText: "${EMAIL}"
- runFlow: dismiss-active-field.yaml
- extendedWaitUntil:
    visible: "^${EMAIL}$"
